--- a/.github/workflows/build-template.yml
+++ b/.github/workflows/build-template.yml
@@ -1,15 +1,15 @@
-name: Build Plugin(Publish if tag)
+name: Build Plugin
 
 on: [ workflow_dispatch ]
 
 env:
-  PLUGIN_NAME: Template
-  SOLUTION_FILE_PATH: ./Template.sln
-  VERSION_FILE_PATH: Template/Version.h
+  PLUGIN_NAME: GenshiCraft-llplugin
+  SOLUTION_FILE_PATH: ./project.sln
+  VERSION_FILE_PATH: src/Version.h
   BUILD_CONFIGURATION: Release
   Platform: X64
   SDK_DIR: ./SDK
-  BDS_VERSION: 1.18.31.04
+  BDS_VERSION: 1.19.10.03
 
 jobs:
   build:
