--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,14 +8,18 @@ file(GLOB_RECURSE SRC_FILES_DIR
         ${PROJECT_SOURCE_DIR}/SDK/Header/*.cpp
         ${PROJECT_SOURCE_DIR}/SDK/Header/*.hpp
         ${PROJECT_SOURCE_DIR}/SDK/Header/*.h
-        ${PROJECT_SOURCE_DIR}/src/*.cpp
+        ${PROJECT_SOURCE_DIR}/src/*.cc
         ${PROJECT_SOURCE_DIR}/src/*.hpp
         ${PROJECT_SOURCE_DIR}/src/*.h
+        ${PROJECT_SOURCE_DIR}/src/weapons/*.cc
+        ${PROJECT_SOURCE_DIR}/src/weapons/*.hpp
+        ${PROJECT_SOURCE_DIR}/src/weapons/*.h
         )
 
 include_directories(SDK/Header)
 include_directories(SDK/Header/third-party)
 include_directories(src)
+include_directories(src/weapons)
 
 link_directories(.)
 
@@ -24,7 +28,7 @@ add_definitions(-D"NDEBUG" -D"TEMPLATE_EXPORTS" -D"WIN32_LEAN_AND_MEAN" -D"_CRT_
 
 add_compile_options(
         /permissive- /GS /GL /W3 /Gy /Zc:wchar_t /Zi /Gm- /sdl /Zc:inline /fp:precise /errorReport:prompt /WX-
-        /Zc:forScope /Gd /Oi /MD /std:c++17 /FC /EHsc /nologo /diagnostics:column
+        /Zc:forScope /Gd /Oi /MD /std:c++17 /FC /EHsc /nologo /diagnostics:column /utf-8
 )
 
 add_link_options(
