--- a/src/project.filters
+++ b/src/project.filters
@@ -18,10 +18,7 @@
     <ClInclude Include="framework.h">
       <Filter>Header</Filter>
     </ClInclude>
-    <ClInclude Include="pch.h">
-      <Filter>Header</Filter>
-    </ClInclude>
-    <ClInclude Include="Version.h">
+    <ClInclude Include="version.h">
       <Filter>Source</Filter>
     </ClInclude>
     <ClInclude Include="resource.h">
@@ -32,15 +29,12 @@
     <ClCompile Include="dllmain.cpp">
       <Filter>Source</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
-      <Filter>Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Plugin.cpp">
+    <ClCompile Include="plugin.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="Resource.rc">
+    <ResourceCompile Include="resource.rc">
       <Filter>Resourse</Filter>
     </ResourceCompile>
   </ItemGroup>
