--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,13 @@
 cmake_minimum_required(VERSION 3.21)
-project(GenshiCraft-llplugin)
+project(GenshiCraft)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_BUILD_TYPE Release)
 
 file(GLOB_RECURSE SRC_FILES_DIR
-        ${PROJECT_SOURCE_DIR}/SDK/Header/*.cpp
-        ${PROJECT_SOURCE_DIR}/SDK/Header/*.hpp
-        ${PROJECT_SOURCE_DIR}/SDK/Header/*.h
+        ${PROJECT_SOURCE_DIR}/SDK/include/llapi/*.cpp
+        ${PROJECT_SOURCE_DIR}/SDK/include/llapi/*.hpp
+        ${PROJECT_SOURCE_DIR}/SDK/include/llapi/*.h
         ${PROJECT_SOURCE_DIR}/src/*.cc
         ${PROJECT_SOURCE_DIR}/src/*.h
         ${PROJECT_SOURCE_DIR}/src/characters/*.cc
@@ -16,28 +16,67 @@ file(GLOB_RECURSE SRC_FILES_DIR
         ${PROJECT_SOURCE_DIR}/src/weapons/*.h
         )
 
-include_directories(SDK/Header)
-include_directories(SDK/Header/third-party)
+include_directories(SDK/include)
+include_directories(SDK/include/llapi)
 include_directories(src)
 
 link_directories(.)
 
-add_definitions(-D"NDEBUG" -D"TEMPLATE_EXPORTS" -D"WIN32_LEAN_AND_MEAN" -D"_CRT_SECURE_NO_WARNINGS" -D"_WINDOWS"
-        -D"_USRDLL" -D"_AMD64_" -D"NOMINMAX" -D"_WINDLL" -D"_UNICODE" -D"UNICODE")
+add_definitions(
+        -D"NDEBUG"
+        -D"NOMINMAX"
+        -D"TEMPLATE_EXPORTS"
+        -D"UNICODE"
+        -D"WIN32_LEAN_AND_MEAN"
+        -D"_AMD64_"
+        -D"_CRT_SECURE_NO_WARNINGS"
+        -D"_UNICODE"
+        -D"_USRDLL"
+        -D"_WINDLL"
+        -D"_WINDOWS"
+)
 
 add_compile_options(
-        /permissive- /GS /GL /W3 /Gy /Zc:wchar_t /Zi /Gm- /sdl /Zc:inline /fp:precise /errorReport:prompt /WX-
-        /Zc:forScope /Gd /Oi /MD /std:c++17 /FC /EHsc /nologo /diagnostics:column /utf-8
+        /diagnostics:column
+        /EHsc
+        /FC
+        /GL
+        /MD
+        /nologo
+        /permissive-
+        /sdl
+        /utf-8
+        /Zc:inline
+        /Zi
 )
 
 add_link_options(
-        /MANIFEST /LTCG:incremental /NXCOMPAT /DEBUG /DLL /MACHINE:X64 /OPT:REF /INCREMENTAL:NO /SUBSYSTEM:WINDOWS
-        /MANIFESTUAC:NO /OPT:ICF /ERRORREPORT:PROMPT /NOLOGO /DELAYLOAD:"bedrock_server.dll" /TLBID:1
+        /DEBUG
+        /DELAYLOAD:"bedrock_server.dll"
+        /DLL
+        /IGNORE:4199
+        /INCREMENTAL:NO
+        /LTCG:INCREMENTAL
+        /MANIFESTUAC:NO
+        /MACHINE:X64
+        /NOLOGO
+        /OPT:ICF
+        /OPT:REF
+        /SUBSYSTEM:CONSOLE
 )
 
-add_library(GenshiCraft-llplugin SHARED ${SRC_FILES_DIR})
+add_library(plugin SHARED ${SRC_FILES_DIR})
 
-add_custom_command(TARGET GenshiCraft-llplugin PRE_BUILD
+target_link_libraries(plugin
+        "${CMAKE_SOURCE_DIR}/SDK/lib/LiteLoader.lib"
+        "${CMAKE_SOURCE_DIR}/SDK/lib/bedrock_server_api.lib"
+        "${CMAKE_SOURCE_DIR}/SDK/lib/bedrock_server_var.lib"
+        "${CMAKE_SOURCE_DIR}/SDK/lib/SymDBHelper.lib"
+        )
+
+add_library(GenshiCraft SHARED ${SRC_FILES_DIR})
+
+add_custom_command(TARGET GenshiCraft PRE_BUILD
         COMMAND cmd /c ${PROJECT_SOURCE_DIR}/prepareLib.cmd ${PROJECT_SOURCE_DIR}
         COMMENT "Preparing Library"
         )
